# Official-IANA-IP-blocks

./: Country Alpha-2 code Alpha-3 code Numeri.csv  Curated-Lists-Creation.ps1  LICENSE  README.md  build.ps1  gh-pages.ps1  index.html
.github/: dependabot.yml
.github/workflows/: Build.yml  CuratedLists.yml  Dependabot auto-approve and merge.yml  gh-pages.yml  gh-pages.yml.old
CIDR-IPAddress/IPV4/: AT.txt  BE.txt  BQ.txt  BR.txt  BZ.txt  CH.txt  CO.txt  CW.txt  CZ.txt  DE.txt  DK.txt  ES.txt  EU.txt  FI.txt  FR.txt  GB.txt  GR.txt  IE.txt  IL.txt  IT.txt  LU.txt  NL.txt  NO.txt  PA.txt  PL.txt  RO.txt  RU.txt  SE.txt  SK.txt  US.txt  ZA.txt
CIDR-IPAddress/IPV6/: BQ.txt  BR.txt  BZ.txt  CW.txt  PA.txt  US.txt
CSV/: countries.csv  global_ipv6.csv
CSV/IPV4/: .csv  AD.csv  AE.csv  AF.csv  AG.csv  AI.csv  AL.csv  AM.csv  AO.csv  AQ.csv  AR.csv  AS.csv  AT.csv  AU.csv  AW.csv  AX.csv  AZ.csv  BA.csv  BB.csv  BD.csv  BE.csv  BF.csv  BG.csv  BH.csv  BI.csv  BJ.csv  BL.csv  BM.csv  BN.csv  BO.csv  BQ.csv  BR.csv  BS.csv  BT.csv  BW.csv  BY.csv  BZ.csv  CA.csv  CD.csv  CF.csv  (+200 more)
CSV/IPV6/: .csv  AD.csv  AE.csv  AF.csv  AG.csv  AI.csv  AL.csv  AM.csv  AO.csv  AQ.csv  AR.csv  AS.csv  AT.csv  AU.csv  AW.csv  (+218 more)
Curated-Lists/: OFACSanctioned.txt  StateSponsorsOfTerrorism.txt
IANASources/: afrinic.txt  apnic.txt  delegated-afrinic-latest.txt  delegated-apnic-latest.txt  delegated-lacnic-latest.txt  lacnic.txt
JSON/: _countries.json  countries.json
TXT/: countries.txt
ip-country-data/: Cargo.toml
ip-country-data/.cargo/: config.toml
ip-country-data/src/: main.rs
(+949 files in other folders)
